[package]
name = "rbus-derive"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi+git@kokakiwi.net>"]
edition = "2018"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[dependencies]
backtrace = "*"
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["full", "extra-traits"] }

[dependencies.proc-macro-utils]
version = "*"
git = "https://gitlab.kokakiwi.net/rusted/proc-macro-utils.git"
