[package]
name = "rbus"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi+git@kokakiwi.net>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
byteordered = "*"
custom_error = "*"
rand = "*"
rbus-derive = { version = "*", path = "../rbus-derive" }

[build-dependencies]
cbindgen = "*"
