[package]
name = "rbus"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi+git@kokakiwi.net>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
bitflags = "*"
byteordered = "*"
custom_error = "*"
lazy_static = "*"
rand = "*"
rbus-derive = { version = "*", path = "../rbus-derive" }
regex = "*"

[build-dependencies]
cbindgen = "*"
