[package]
name = "rbus"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi+git@kokakiwi.net>"]
edition = "2018"
license = "BSD-3-Clause"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
bitflags = "*"
byteordered = "*"
custom_error = "*"
derive_more = "*"
lazy_static = "*"
rand = "*"
rbus-derive = { version = "*", path = "../rbus-derive" }
regex = "*"

[build-dependencies]
cbindgen = "*"
